--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -177,6 +177,7 @@ nav: # This lists all the files that become part of the documentation
       - git-submodule-storage: 'design/git-submodule-storage.md'
       - JJ run: 'design/run.md'
       - Sparse patterns v2: 'design/sparse-v2.md'
+      - Subtree command: 'design/subtree-command.md'
       - Tracking branches: 'design/tracking-branches.md'
       - Copy tracking and tracing: 'design/copy-tracking.md'
       - Secure config: 'design/secure-config.md'
